--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
   <meta http-equiv="Cross-Origin-Resource-Policy" content="cross-origin">
   <!-- Add favicons -->
-  <link rel="icon" type="image/png" href="./img/favi.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/favi.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favi.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/favi.png">
+  <link rel="icon" type="image/svg" href="/img/logo.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.svg">
+  <link rel="icon" type="image/svg" sizes="32x32" href="/img/logo.svg">
+  <link rel="icon" type="image/svg" sizes="16x16" href="/img/logo.svg">
   <meta name="theme-color" content="#4285f4" />
   <link rel="stylesheet" href="./css/theme.css">
   <link rel="stylesheet" href="./css/res.css">
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script type="module">
     import AppMain from './js/app.js'
     customElements.define('app-main', AppMain)
